@@ -11,7 +11,8 @@
 * Fix - Inconsistent shipping options in Payment Request popup.
 * Fix - Payment methods checkbox UI looking off when Gutenberg is active.
 * Update - Remove unused "wcpay_deposits_summary_empty_state_click" track.
-* Fix - Applied sentence case on all strings.
+* Fix - Border style not being applied properly on Multi-Currency block widget.
+* Fix - Applied sentence case on all strings
 * Fix - Missing customer information after guest checkout via Checkout Block.
 * Fix - Show correct payment method name during checkout using upe methods.
 * Update - display fees per payment method on overview page.
@@ -28,6 +29,7 @@
 * Add - Enable P24 UPE method.
 * Add - Enable iDeal UPE method.
 * Add - Payment method activation requirements modal and API integration.
+
 
 = 3.1.0 - 2021-10-06 =
 * Fix - Issue affecting analytics for Multi-Currency orders made with a zero-decimal to non-zero decimal conversion.
